// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`if instruction compiler > emits a float if block 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultIsInteger": false,
      "hasExpectedResult": false,
    },
    {
      "blockType": 2,
      "expectedResultIsInteger": false,
      "hasExpectedResult": true,
    },
  ],
  "byteCode": [
    4,
    125,
  ],
}
`;

exports[`if instruction compiler > emits a void if block when given a void argument 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultIsInteger": false,
      "hasExpectedResult": false,
    },
    {
      "blockType": 2,
      "expectedResultIsInteger": false,
      "hasExpectedResult": false,
    },
  ],
  "byteCode": [
    4,
    64,
  ],
}
`;

exports[`if instruction compiler > emits a void if block when given no arguments 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultIsInteger": false,
      "hasExpectedResult": false,
    },
    {
      "blockType": 2,
      "expectedResultIsInteger": false,
      "hasExpectedResult": false,
    },
  ],
  "byteCode": [
    4,
    64,
  ],
}
`;

exports[`if instruction compiler > emits an int if block 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultIsInteger": false,
      "hasExpectedResult": false,
    },
    {
      "blockType": 2,
      "expectedResultIsInteger": true,
      "hasExpectedResult": true,
    },
  ],
  "byteCode": [
    4,
    127,
  ],
}
`;
